tests/rosetta/out/Fortran/cartesian-product-of-two-or-more-lists-1.error
gfortran: exit status 1
/tmp/cartesian-product-of-two-or-more-lists-1.f90:44:29:

   44 |         write(s3,'(G0)') row(((j)+1))
      |                             1
Error: Syntax error in WRITE statement at (1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:64:38:

   64 |     print *, llStr(cart2((/1,2/),(//)))
      |                                      1
Error: Empty array constructor at (1) is not allowed
/tmp/cartesian-product-of-two-or-more-lists-1.f90:65:30:

   65 |     print *, llStr(cart2((//),(/1,2/)))
      |                              1
Error: Empty array constructor at (1) is not allowed
/tmp/cartesian-product-of-two-or-more-lists-1.f90:35:49:

   35 |   recursive character(len=100) function llStr(lst) result(res)
      |                                                 1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘lst’ at (1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:17:36:

   17 |   recursive integer function cart2(a,b) result(res)
      |                                    1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:17:38:

   17 |   recursive integer function cart2(a,b) result(res)
      |                                      1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘b’ at (1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:62:25:

   62 |     print *, llStr(cart2((/1,2/),(/3,4/)))
      |                         1
Error: Rank mismatch in argument ‘a’ at (1) (scalar and rank-1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:62:33:

   62 |     print *, llStr(cart2((/1,2/),(/3,4/)))
      |                                 1
Error: Rank mismatch in argument ‘b’ at (1) (scalar and rank-1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:28:8:

   28 |         app2(size(p)+1) = (/x,y/)
      |        1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:23:22:

   23 |       do i1 = 1, size(b)
      |                      1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cartesian-product-of-two-or-more-lists-1.f90:21:20:

   21 |     do i0 = 1, size(a)
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cartesian-product-of-two-or-more-lists-1.f90:32:4:

   32 |     res = p
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:62:19:

   62 |     print *, llStr(cart2((/1,2/),(/3,4/)))
      |                   1
Error: Expected a procedure for argument ‘lst’ at (1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:45:13:

   45 |         s = (s + s3)
      |             1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:46:23:

   46 |         if (((j < size(row)) - 1)) then
      |                       1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cartesian-product-of-two-or-more-lists-1.f90:43:26:

   43 |       do while ((j < size(row)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cartesian-product-of-two-or-more-lists-1.f90:52:21:

   52 |       if (((i < size(lst)) - 1)) then
      |                     1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cartesian-product-of-two-or-more-lists-1.f90:39:24:

   39 |     do while ((i < size(lst)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/cartesian-product-of-two-or-more-lists-1.f90:63:25:

   63 |     print *, llStr(cart2((/3,4/),(/1,2/)))
      |                         1
Error: Rank mismatch in argument ‘a’ at (1) (scalar and rank-1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:63:33:

   63 |     print *, llStr(cart2((/3,4/),(/1,2/)))
      |                                 1
Error: Rank mismatch in argument ‘b’ at (1) (scalar and rank-1)
/tmp/cartesian-product-of-two-or-more-lists-1.f90:63:19:

   63 |     print *, llStr(cart2((/3,4/),(/1,2/)))
      |                   1
Error: Expected a procedure for argument ‘lst’ at (1)
